--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lib/"
   ],
   "scripts": {
-    "build": "tsc",
-    "test": "ts-node test/manual.test.ts"
+    "compile": "tsc",
+    "build": "rimraf lib && tsc",
+    "test": "ts-node test/manual.test.ts",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "altostra",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^12.7.2",
     "@types/request": "^2.48.2",
+    "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
